# api-test-skill

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
instructions/: code-gen-flat.md  code-gen-layered.md  testcase-gen.md  workflow.md
knowledge/: auth-testing.md  base.md  file-upload.md  idempotency.md  pagination.md  param-validation.md
scripts/: parse.py  plan_files.py  render_cases.py  validate.py
scripts/_core/: common.py  endpoints.py  knowledge_loader.py  naming.py  output.py  testcase_document.py  validator.py
scripts/_core/parser/: base.py  detect.py  postman.py  swagger.py
tests/: test_cli_errors.py  test_knowledge_loader.py  test_models.py  test_naming.py  test_output.py  test_postman_parser.py  test_swagger_parser.py  test_testcase_document.py  test_validator.py  test_workflow_cli.py
tests/fixtures/: nested.postman.json  openapi-complex.yaml  petstore.yaml  sample-api.md  sample.postman.json  swagger2.yaml
